# openaip-rs

./: Cargo.toml  README.md
src/: lib.rs  xml.rs
tests/: integration_test.rs  real_world.rs
tests/data/: de_asp.xml
