[package]
name = "openaip"
description = "OpenAIP file parser for Rust"
version = "0.3.0"
authors = ["Tobias Bieniek <tobias.bieniek@gmail.com>"]
repository = "https://github.com/Turbo87/openaip-rs"
documentation = "https://docs.rs/openaip"
license = "Apache-2.0"
edition = "2024"

[badges]
travis-ci = { repository = "Turbo87/openaip-rs", branch = "master" }

[dependencies]
minidom = "0.19.0"
thiserror = "2.0"

[dev-dependencies]
approx = "0.5.1"
criterion = "0.8.2"

[[bench]]
name = "parse"
harness = false
